--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
           <h1 class="display-3 fw-bolder mb-3">Best<br><mark class="bsb-tpl-highlight bsb-tpl-highlight-blue"><span class="bsb-tpl-font-hw display-2 text-accent fw-normal">Digital Marketing Strategist</span></mark> In Kannur</h1>
           <p class="fs-4 mb-5">I am Shadha Shaduli Best Digital Marketing Strategist In Kannur. Offering SEO, SMM & SEM. I will take your business to the next level.</p>
           <div class="d-grid gap-2 d-sm-flex">
-            <button type="button" class="btn btn-primary bsb-btn-3xl rounded-pill">Free Consultation</button>
-            <button type="button" class="btn btn-outline-primary bsb-btn-3xl rounded-pill">Buy Credits</button>
+            <button type="button" class="btn btn-primary bsb-btn-3xl rounded-pill">Connect with Me</button>
           </div>
         </div>
         <div class="col-12 col-lg-5 text-center">
