--- a/index.html
+++ b/index.html
@@ -714,7 +714,8 @@
                   <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/testimonial-img-1.jpg" alt="Luna John">
                   <figcaption>
                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="5" data-bsb-star-off="0"></div>
-                    <blockquote class="bsb-blockquote-icon mb-4">We were so impressed with the work they did for us. They were able to take our vision and turn it into a reality, and they did it all on time and within budget. We would highly recommend them to anyone looking for a reliable partner.</blockquote>
+                    <blockquote class="bsb-blockquote-icon mb-4">I am beyond impressed with the SEO work Shadha delivered for our website. She truly understood our vision and transformed it into a reality, significantly improving our online visibility. Not only was the project completed on time, but also within budget, which is rare to find in today’s fast-paced market. Shadha’s expertise and dedication make her a trusted partner for any business looking to enhance their digital presence. I highly recommend her to anyone seeking top-notch SEO services."
+</blockquote>
                     <h4 class="mb-2">Luna John</h4>
                     <h5 class="fs-6 text-secondary mb-0">UX Designer</h5>
                   </figcaption>
