--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                     <blockquote class="bsb-blockquote-icon mb-4">I am beyond impressed with the SEO work Shadha delivered for our website. She truly understood our vision and transformed it into a reality, significantly improving our online visibility. Not only was the project completed on time, but also within budget, which is rare to find in today’s fast-paced market. Shadha’s expertise and dedication make her a trusted partner for any business looking to enhance their digital presence. I highly recommend her to anyone seeking top-notch SEO services."
 </blockquote>
                     <h4 class="mb-2">Luna John</h4>
-                    <h5 class="fs-6 text-secondary mb-0">UX Designer</h5>
+                    <h5 class="fs-6 text-secondary mb-0">CEO - Rudio US</h5>
                   </figcaption>
                 </figure>
               </div>
@@ -730,9 +730,9 @@
                   <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/testimonial-img-2.jpg" alt="Mark Smith">
                   <figcaption>
                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="4" data-bsb-star-off="1"></div>
-                    <blockquote class="bsb-blockquote-icon mb-4">We were looking for a company that could help us develop a new website that was both visually appealing and user-friendly. We are so happy with the results, and we would highly recommend them to anyone looking for a new website.</blockquote>
+                    <blockquote class="bsb-blockquote-icon mb-4">As the Marketing Manager at RaRco, we were searching for a partner who could elevate our social media presence with engaging content and a strategic approach. Shadha exceeded our expectations by delivering a social media strategy that was both visually captivating and highly effective in driving engagement. We’re thrilled with the results and highly recommend her services to any business looking to grow their social media presence.</blockquote>
                     <h4 class="mb-2">Mark Smith</h4>
-                    <h5 class="fs-6 text-secondary mb-0">Marketing Specialist</h5>
+                    <h5 class="fs-6 text-secondary mb-0">Marketing Manager - RaRco</h5>
                   </figcaption>
                 </figure>
               </div>
@@ -745,9 +745,9 @@
                   <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/testimonial-img-4.jpg" alt="Luke Reeves">
                   <figcaption>
                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="5" data-bsb-star-off="0"></div>
-                    <blockquote class="bsb-blockquote-icon mb-4">We were looking for a company that could help us with our branding. We needed a website and marketing materials. They were able to create a brand identity that we loved. They worked with us to develop a logo that represented our company.</blockquote>
+                    <blockquote class="bsb-blockquote-icon mb-4">Partnering with Shadha for our digital marketing needs has been a game-changer. Her strategic approach to SEO, social media, and online advertising has significantly boosted our lead generation and helped us reach new customers. The tailored campaigns she created delivered measurable results, increasing both traffic and conversions. Shadha is a dedicated professional, and we highly recommend her services to anyone looking to grow their business through digital marketing." </blockquote>
                     <h4 class="mb-2">Luke Reeves</h4>
-                    <h5 class="fs-6 text-secondary mb-0">Sales Manager</h5>
+                    <h5 class="fs-6 text-secondary mb-0">Sales Manager - Amber ZX</h5>
                   </figcaption>
                 </figure>
               </div>
